<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/editNom"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nom"
        android:textColorHint="@color/textBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editPrenom"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/prenom"
        android:inputType="textPersonName"
        android:textColorHint="@color/textBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="245dp"
        android:layout_height="295dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/textDDN"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:text="@string/ddn"
        android:textColor="@color/textBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <EditText
        android:id="@+id/editVDN"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/vdn"
        android:inputType="textPersonName"
        android:textColorHint="@color/textBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

    <Button
        android:id="@+id/buttonValdie1"
        android:layout_width="199dp"
        android:layout_height="73dp"
        android:layout_marginBottom="16dp"
        android:text="@string/valdie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textResult"
        android:visibility = "gone"
        android:layout_width="272dp"
        android:layout_height="106dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editNom"
        app:layout_constraintVertical_bias="0.829" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="211dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/pn"
        android:visibility = "gone"
        android:inputType="textPersonName"
        android:textColorHint="@color/textBlack"
        app:layout_constraintBottom_toTopOf="@+id/textResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editVDN"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textDepDN"
        android:layout_width="141dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:text="@string/depDn"
        android:textColor="@color/textBlack"
        app:layout_constraintBottom_toTopOf="@+id/buttonValdie1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhoneNumber"
        app:layout_constraintVertical_bias="0.111" />

    <Spinner
        android:id="@+id/spinnerDepDN"
        android:layout_width="179dp"
        android:layout_height="54dp"
        android:entries="@array/department_arrays"
        app:layout_constraintBottom_toBottomOf="@+id/textDepDN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toEndOf="@+id/textDepDN"
        app:layout_constraintTop_toTopOf="@+id/textDepDN"
        app:layout_constraintVertical_bias="0.612" />

</androidx.constraintlayout.widget.ConstraintLayout>